fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -39,11 +39,14 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    width: 100vw;
 }
 
 .components-container {
     display: flex;
     flex-direction: column;
+    height: 100%;
+    width: 100%;
 }
 
 .headline {
@@ -67,10 +70,6 @@
 }
 
 .add-to-home {
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 0;
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
@@ -88,10 +87,6 @@
 }
 
 .connect-buttons {
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 0;
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
